--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "xpaid-wallet-sdk": "^0.1.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
