--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -28,7 +29,7 @@
     "react-router-dom": "^6.29.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "xpaid-wallet-sdk": "^0.2.6",
+    "xpaid-wallet-sdk": "^0.2.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
